--- a/bootstrap-hw.html
+++ b/bootstrap-hw.html
@@ -28,6 +28,9 @@
           <div class="jumbotron">
               <h1>How a bill becomes a law</h1>
 
+<div class="row">
+
+  <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2" >
               <div class="panel panel-default">
                   <div class="panel-heading">
                     <h3 class="panel-title">Step 1</h3>
@@ -36,7 +39,9 @@
                   Bill is introduced in the House of Representatives or Senate.
                 </div>
               </div>
+  </div>
 
+  <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2" >
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">Step 2</h3>
@@ -45,7 +50,9 @@
                   Bill goes to a committee, where it may be amended.
                 </div>
               </div>
+  </div>
 
+  <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2" >
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">Step 3</h3>
@@ -54,7 +61,9 @@
                   Bill passes out of committee and is scheduled for floor debate.
                 </div>
               </div>
+  </div>
 
+  <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2" >
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">Step 4</h3>
@@ -63,7 +72,9 @@
                   Bill goes to the House or Senate floor, where it may be amended. If passed, it continues to the Governor.
                 </div>
               </div>
+  </div>
 
+  <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2" >
               <div class="panel panel-default">
                 <div class="panel-heading">
                   <h3 class="panel-title">Step 5</h3>
@@ -72,7 +83,9 @@
                   Once the House and Senate have agreed on the bill's language, the governor signs it into law or vetoes it.
                 </div>
               </div>
+  </div>
 
+  </div>
 
               <p></p>
           </div>
