--- a/bootstrap-hw.html
+++ b/bootstrap-hw.html
@@ -12,6 +12,7 @@
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
         <link rel="stylesheet" href="css/bootstrap.min.css">
+
         <style>
             body {
                 padding-top: 50px;
@@ -20,6 +21,9 @@
         </style>
         <link rel="stylesheet" href="css/bootstrap-theme.min.css">
         <link rel="stylesheet" href="css/main.css">
+        <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
+
+
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
     </head>
@@ -36,6 +40,7 @@
                     <h3 class="panel-title">Step 1</h3>
                   </div>
                 <div class="panel-body">
+                    <h1> <i class="fab fa-angellist"></i> </h1>
                   Bill is introduced in the House of Representatives or Senate.
                 </div>
               </div>
@@ -47,7 +52,8 @@
                   <h3 class="panel-title">Step 2</h3>
                 </div>
                 <div class="panel-body">
-                  Bill goes to a committee, where it may be amended.
+                  <h1><i class="fas fa-users"></i></h1>
+                    Bill goes to a committee, where it may be amended.
                 </div>
               </div>
   </div>
@@ -58,6 +64,7 @@
                   <h3 class="panel-title">Step 3</h3>
                 </div>
                 <div class="panel-body">
+                  <h1> <i class="fas fa-sign-out-alt"></i> </h1>
                   Bill passes out of committee and is scheduled for floor debate.
                 </div>
               </div>
@@ -69,6 +76,7 @@
                   <h3 class="panel-title">Step 4</h3>
                 </div>
                 <div class="panel-body">
+                  <h1> <i class="fas fa-home"></i> </h1>
                   Bill goes to the House or Senate floor, where it may be amended. If passed, it continues to the Governor.
                 </div>
               </div>
@@ -80,6 +88,7 @@
                   <h3 class="panel-title">Step 5</h3>
                 </div>
                 <div class="panel-body">
+                  <h1> <i class="far fa-smile"></i> </h1>
                   Once the House and Senate have agreed on the bill's language, the governor signs it into law or vetoes it.
                 </div>
               </div>
