added css file + rules

--- a/bootstrap-hw.html
+++ b/bootstrap-hw.html
@@ -23,15 +23,18 @@
         <link rel="stylesheet" href="css/main.css">
         <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
 
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/4.0.0/solar/bootstrap.min.css">
 
 
         <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <div class="container">
           <div class="jumbotron">
-              <h1>How a bill becomes a law</h1>
-
+              <div class="top"><h1>How a bill becomes a law</h1></div>
+</div>
 <div class="row">
 
   <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 col-md-push-1" >
